--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <i class="fa-brands fa-instagram"></i>
+    <!-- <i class="fa-brands fa-instagram"></i> -->
+    <h1>Hello, World!</h1>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
